<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:id="@+id/fragment_calendar">

    <TextView
        android:id="@+id/upcoming_races_list_title"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        app:layout_constraintHeight_percent="0.04"

        app:autoSizeMaxTextSize="100sp"
        app:autoSizeMinTextSize="5sp"
        app:autoSizeStepGranularity="2sp"
        app:autoSizeTextType="uniform"

        android:background="@color/faded_red"
        android:text="@string/upcoming_races"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <ListView
        android:id="@+id/upcoming_races_list"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        app:layout_constraintHeight_percent="0.475"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/upcoming_races_list_title" >
    </ListView>

    <androidx.appcompat.widget.SwitchCompat
        android:id="@+id/mapSwitch"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        app:layout_constraintHeight_percent="0.04"
        app:layout_constraintStart_toStartOf="parent"

        app:autoSizeMaxTextSize="100sp"
        app:autoSizeMinTextSize="5sp"
        app:autoSizeStepGranularity="2sp"
        app:autoSizeTextType="uniform"
        android:textColor="@color/grey"

        app:layout_constraintTop_toBottomOf="@+id/upcoming_races_list"
        android:background="@color/faded_red"
        android:checked="true"
        android:text="@string/show_map" />

    <View
        android:id="@+id/view2"
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:background="@android:color/darker_gray"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/mapSwitch" />

    <TextView
        android:id="@+id/next_race_map_title"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        app:autoSizeMaxTextSize="100sp"
        app:autoSizeMinTextSize="2sp"
        app:autoSizeStepGranularity="2sp"
        app:autoSizeTextType="uniform"

        app:layout_constraintHeight_percent="0.04"
        android:background="@color/faded_red"
        android:text="@string/next_race_location"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/view2" />

    <View
        android:id="@+id/view"
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:background="@android:color/darker_gray"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/next_race_map_title" />


    <com.google.android.gms.maps.MapView
        android:id="@+id/mapView"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        app:layout_constraintHeight_percent="0.4"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/next_race_map_title" />

</androidx.constraintlayout.widget.ConstraintLayout>